# AP_Client

./: Cargo.toml  input.toml
src/: general_use.rs  main.rs  network_initializer.rs  new_ui_test.rs  ui.rs
src/client_danylo/: chat_client.rs  client.rs  client_danylo.rs  message.rs  mod.rs  test_ui.rs  ui.rs
src/clients/: client.rs  client_chen.rs  mod.rs
src/clients/client_chen/: client_chen.rs  functionality_test.rs  general_client_traits.rs  mod.rs  prelude.rs  web_browser_client_traits.rs
src/clients/client_chen/impl_general_client_traits/: impl_command_handler.rs  impl_communication_tools.rs  impl_flooding_packets_handler.rs  impl_fragment_handler.rs  impl_packet_creator.rs  impl_packet_response_handler.rs  impl_packets_receiver.rs  impl_router.rs  impl_sending.rs  impl_server_query.rs  mod.rs
src/clients/client_danylo/: chat_gui.rs  client_danylo.rs  message_fragments.rs  mod.rs  test_gui.rs  test_ui.rs  ui.rs
src/clients/client_danylo/implementations/: impl_command_handler.rs  impl_server_response_handler.rs  mod.rs
src/servers/: communication_server.rs  media_server.rs  mod.rs  server.rs  text_server.rs
src/simulation_controller/: mod.rs  simulation_controller.rs
