[package]
name = "Client"
version = "0.1.0"
edition = "2021"

[dependencies]
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["serialize", "debug"] }
krusty_drone = { git = "https://github.com/Danylo37/krusty_drone"}

crossbeam-channel = "0.5.13"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
log = "0.4.22"
env_logger = "0.11.6"
eframe = "0.30.0"
toml = "0.8.19"